--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "parcel": "^2.0.0-rc.0"
   },
   "name": "todolist",
@@ -7,7 +8,8 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
