--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Dyl-Richardson/Todo-list.git"
+    "url": "git+https://dyl-richardson.github.io/test-parcel/.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Dyl-Richardson/Todo-list/issues"
+    "url": "https://dyl-richardson.github.io/test-parcel//issues"
   },
-  "homepage": "https://github.com/Dyl-Richardson/Todo-list#readme",
+  "homepage": "https://dyl-richardson.github.io/test-parcel/",
   "devDependencies": {
     "gh-pages": "^3.2.3",
     "parcel": "^2.0.0"
